fix: removed .img_wrap border and added outline to #listing img objects

--- a/css/style.css
+++ b/css/style.css
@@ -129,18 +129,15 @@ header ul {
 
 /* LISTING */
 
-.img_wrap {
-    border: 3px solid #0060c8;
-    width: 100%;
+.listing-img-outline {
+    outline: 3px solid #0060c8;
+    outline-offset: 0.3rem;
 }
 
 .img_wrap:hover {
     transform: translate(0, -1rem);
 }
 
-.img_wrap.invisible_border {
-    border: 3px solid white;
-}
 
 
 /* HARDWARE */
